# Sonic-Pocket

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  roadmap.md
.github/workflows/: tests.yml
analysis/: README.md  camera.md  collision-routine-map.md  collision.md  entrypoint.md  input.md  player.md  runtime-trace-001.md  runtime-trace-002.md  runtime-trace-003.md  self-verifying-port-workflow.md  symbols.csv  task-scheduler.md  vblank.md
config/: rom.json  toolchain.json
docs/: getting-started.md  memory-map.md  pc-viewer.md  rom-player-port.md  rom-runtime-matching.md  runtime-tracing.md  valleybell-reference.md
patches/: ghidra-neogeopocket-loader-ghidra12.patch  ngdis-msvc.patch
scripts/: apply-ghidra-symbols.ps1  bizhawk-animation-trace.lua  bizhawk-player-trace.lua  bizhawk-skid-dust-trace.lua  bizhawk-title-capture.lua  bizhawk-title-object-trace.lua  build-viewer.ps1  decompile-ghidra-targets.ps1  disassemble-entry.ps1  export-ghidra-listing.ps1  find-ghidra-references.ps1  launch-ghidra.ps1  port-improvement-loop.ps1  run-runtime-regression.ps1  test-collision-candidate.ps1
scripts/ghidra/: ExportDecompilation.java  ExportListingRanges.java  ExportReferencesTo.java  (+1 more)
tests/: test_extract_level.py  test_rominfo.py  test_symbols.py
tools/: analyze_teacher_trace.py  analyze_title_object_trace.py  collision_scan_lab.py  compare_player_trace.py  compare_title_frames.py  extract_level.py  extract_title.py  floor_correction_lab.py  import_title_teacher_sequence.py  rominfo.py  verify_gameplay_parity.py  verify_title_parity.py
(+1 files in other folders)
